--- a/projects/src/vascular-diseases-application-VR.html
+++ b/projects/src/vascular-diseases-application-VR.html
@@ -23,14 +23,14 @@
 
     <!-- Library of Virtual Reality -->
     <script type="text/javascript" charset="UTF-8" src="../libs/aframe-master.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../libs/vr-interface.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/orbi.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/aframe-button-controls.js"></script>
 
     <script>
         AFRAME.registerComponent('config', {
             init: function () {
                 const self = this;
-                const vrInterface = this.el.components['vr-interface'];
+                const vrInterface = this.el.components['orbi'];
 
                 this.models = document.querySelectorAll('.menu-model');
                 this.modelIndex = 0;
@@ -415,7 +415,7 @@
 
         <a-plane position="0 0 0" rotation="-90 0 0" width="20" height="20" color="#666666"></a-plane>
 
-        <a-entity vr-interface="dimension: 3 2; orbits:1.1 1.5 2; theta: 90; rho: 0; movementBar: true; transparency: true; gap: 0.01 0.01; 
+        <a-entity orbi="dimension: 3 2; orbits:1.1 1.5 2; theta: 90; phi: 0; movementBar: true; transparency: true; gap: 0.01 0.01; 
             border: 1.2 #6d7584; centralize: true; font:assets/fonts/roboto-msdf.json; negate: false" config
             button-controls></a-entity>
 
