--- a/projects/src/inclined-plane-application-VR.html
+++ b/projects/src/inclined-plane-application-VR.html
@@ -26,7 +26,7 @@
     <!-- Physics libraries -->
     <script type="text/javascript" charset="UTF-8" src="../libs/aframe-physics-system.js"></script>
     <!-- vr interface -->
-    <script type="text/javascript" charset="UTF-8" src="../libs/vr-interface.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/orbi.js"></script>
 
     <script>
         AFRAME.registerComponent("app", {
@@ -113,7 +113,7 @@
 
 
                 // Setting up VR Interface
-                this.vrInterface = document.querySelector('[vr-interface]').components['vr-interface'];
+                this.vrInterface = document.querySelector('[orbi]').components['orbi'];
                 const rig = document.querySelector('#rig');
                 const camera = document.querySelector('#camera').object3D;
                 
@@ -498,7 +498,7 @@
         </a-entity>
 
         <a-entity
-            vr-interface="dimension: 3 2; theta: 135; transparency: true; gap: 0.01 0.01; border: 1 #6d7584; 
+            orbi="dimension: 3 2; theta: 135; transparency: true; gap: 0.01 0.01; border: 1 #6d7584; 
             font:assets/fonts/roboto-msdf.json; negate: false; messageSize: 1.3; sideTextSize: 0.75 0.6; sideTextRotation: -30; bgTransparency: false;"
             app>
         </a-entity>
