--- a/projects/src/virtual-travel-application.html
+++ b/projects/src/virtual-travel-application.html
@@ -6,7 +6,7 @@
     <title id="title">Virtual Travel</title>
     <meta name="description" content="360&deg; Image - A-Frame">
     <script src="../libs/aframe-master.js"></script>
-    <script src="../libs/vr-interface.js"></script>
+    <script src="../libs/orbi.js"></script>
     <script src="../libs/aframe-button-controls.js"></script>
     <script src="../js/translation.js"></script>
 
@@ -22,7 +22,7 @@
                     language = language.substring(aux.length, language.length);
                     switch (language) {
                         case 'en-US': {
-                            const vrInterface = this.el.components['vr-interface'];
+                            const vrInterface = this.el.components['orbi'];
                             var skyEl = this.el.sceneEl.querySelector('#place');
                             let string = '\nPLACE: San Francisco, California United States of America.\n';
                             string += '\nFort Point is a masonry seacoast fortification \nlocated on the southern side of the Golden Gate at\n the entrance to San Francisco Bay.';
@@ -110,7 +110,7 @@
                         }
                             break;
                         case 'pt-BR': {
-                            const vrInterface = this.el.components['vr-interface'];
+                            const vrInterface = this.el.components['orbi'];
                             var skyEl = this.el.sceneEl.querySelector('#place');
                             let string = '\nPLACE: São Francisco, Califórnia Estados Unidos da América.\n';
                             string += '\nFort Point é uma fortificação de alvenaria costeira\n localizada no lado sul da Golden Gate, na entrada\n da Baía de São Francisco .';
@@ -201,7 +201,7 @@
                 }
 
                 else {
-                    const vrInterface = this.el.components['vr-interface'];
+                    const vrInterface = this.el.components['orbi'];
                     var skyEl = this.el.sceneEl.querySelector('#place');
                     let string = '\nPLACE: San Francisco, California United States of America.\n';
                     string += '\nFort Point is a masonry seacoast fortification \nlocated on the southern side of the Golden Gate at\n the entrance to San Francisco Bay.';
@@ -332,7 +332,7 @@
 
 
 
-        <a-entity vr-interface="dimension: 4 2; orbits: 1 1.5 2; theta: 90; rho: 0 ; transparency: true; gap: 0.01 0.01; border: 1.2 #6d7584; 
+        <a-entity orbi="dimension: 4 2; orbits: 1 1.5 2; theta: 90; phi: 0 ; transparency: true; gap: 0.01 0.01; border: 1.2 #6d7584; 
             font:assets/fonts/roboto-msdf.json; negate: false; messageColor: yellow; messageSize: 1.2; sideTextSize: 0.88 1.3; sideTextRotation: -40; 
             bgTransparency: false;" config button-controls>
         </a-entity>
