--- a/projects/src/inclined-plane-application-VR.html
+++ b/projects/src/inclined-plane-application-VR.html
@@ -25,7 +25,7 @@
     <script type="text/javascript" charset="UTF-8" src="../libs/util/Aframe-Extras/aframe-extras.js"></script>
     <!-- Physics libraries -->
     <script type="text/javascript" charset="UTF-8" src="../libs/aframe-physics-system.js"></script>
-    <!-- vr interface -->
+    <!-- orbi -->
     <script type="text/javascript" charset="UTF-8" src="../libs/orbi.js"></script>
 
     <script>
@@ -112,8 +112,8 @@
                 this.groupForces.setObject3D('frictionArrow', this.frictionArrow);
 
 
-                // Setting up VR Interface
-                this.vrInterface = document.querySelector('[orbi]').components['orbi'];
+                // Setting up orbi
+                this.orbi = document.querySelector('[orbi]').components['orbi'];
                 const rig = document.querySelector('#rig');
                 const camera = document.querySelector('#camera').object3D;
                 
@@ -125,7 +125,7 @@
                     switch (language) {
                         case "en-US":
                             {
-                                this.vrInterface.addButton('start', '#start', () => {
+                                this.orbi.addButton('start', '#start', () => {
                                      self.startSimulation();
                                 });
 
@@ -135,29 +135,29 @@
                                     { cameraPos: '5 0 3', interfacePos: '0 0 1', infoPos: '4.3 1.6 4', rotation: 180 },
                                     { cameraPos: '0 0 7', interfacePos: '-1 0 0', infoPos: '-1 1.6 6.3', rotation: 90 },
                                 ]
-                                this.vrInterface.addButton('changeCamera', '#changeCamera', () => {
+                                this.orbi.addButton('changeCamera', '#changeCamera', () => {
                                     this.posIdx = this.posIdx == 2 ? 0 : this.posIdx + 1;
 
                                     let { cameraPos, interfacePos, infoPos, rotation } = this.positions[this.posIdx];
 
                                     rig.setAttribute('position', cameraPos);
                                     rig.setAttribute('rotation', { x: 0, y: rotation - (camera.rotation.y * 180 / Math.PI), z: 0 });
-                                    this.vrInterface.updatePosition({ theta: rotation });
+                                    this.orbi.updatePosition({ theta: rotation });
                                 });
 
-                                this.vrInterface.addButton('increaseFriction', '#increaseFriction', () => {
+                                this.orbi.addButton('increaseFriction', '#increaseFriction', () => {
                                     self.changeFriction();
                                 });
 
-                                this.vrInterface.addButton('decreaseFriction', '#decreaseFriction', () => {
+                                this.orbi.addButton('decreaseFriction', '#decreaseFriction', () => {
                                     self.changeFriction(-1);
                                 });
 
-                                this.vrInterface.addButton('increaseAngle', '#increaseAngle', () => {
+                                this.orbi.addButton('increaseAngle', '#increaseAngle', () => {
                                     self.changeAngle();
                                 });
 
-                                this.vrInterface.addButton('decreaseAngle', '#decreaseAngle', () => {
+                                this.orbi.addButton('decreaseAngle', '#decreaseAngle', () => {
                                     self.changeAngle(-1);
                                 });
 
@@ -165,7 +165,7 @@
                             }
                         case "pt-BR":
                             {
-                                this.vrInterface.addButton('start-pt', '#start-pt', () => {
+                                this.orbi.addButton('start-pt', '#start-pt', () => {
                                     self.startSimulation();
                                 });
 
@@ -175,29 +175,29 @@
                                     { cameraPos: '5 0 3', interfacePos: '0 0 1', infoPos: '4.3 1.6 4', rotation: 180 },
                                     { cameraPos: '0 0 7', interfacePos: '-1 0 0', infoPos: '-1 1.6 6.3', rotation: 90 },
                                 ]
-                                this.vrInterface.addButton('changeCamera-pt', '#changeCamera-pt', () => {
+                                this.orbi.addButton('changeCamera-pt', '#changeCamera-pt', () => {
                                     this.posIdx = this.posIdx == 2 ? 0 : this.posIdx + 1;
 
                                     let { cameraPos, interfacePos, infoPos, rotation } = this.positions[this.posIdx];
 
                                     rig.setAttribute('position', cameraPos);
                                     rig.setAttribute('rotation', { x: 0, y: rotation - (camera.rotation.y * 180 / Math.PI), z: 0 });
-                                    this.vrInterface.updatePosition({ theta: rotation });
+                                    this.orbi.updatePosition({ theta: rotation });
                                 });
 
-                                this.vrInterface.addButton('increaseFriction-pt', '#increaseFriction-pt', () => {
+                                this.orbi.addButton('increaseFriction-pt', '#increaseFriction-pt', () => {
                                     self.changeFriction();
                                 });
 
-                                this.vrInterface.addButton('decreaseFriction-pt', '#decreaseFriction-pt', () => {
+                                this.orbi.addButton('decreaseFriction-pt', '#decreaseFriction-pt', () => {
                                     self.changeFriction(-1);
                                 });
 
-                                this.vrInterface.addButton('increaseAngle-pt', '#increaseAngle-pt', () => {
+                                this.orbi.addButton('increaseAngle-pt', '#increaseAngle-pt', () => {
                                     self.changeAngle();
                                 });
 
-                                this.vrInterface.addButton('decreaseAngle-pt', '#decreaseAngle-pt', () => {
+                                this.orbi.addButton('decreaseAngle-pt', '#decreaseAngle-pt', () => {
                                     self.changeAngle(-1);
                                 });
 
@@ -207,7 +207,7 @@
                     }
                 }
                 else {
-                    this.vrInterface.addButton('start', '#start', () => {
+                    this.orbi.addButton('start', '#start', () => {
                         self.startSimulation();
                     });
 
@@ -217,29 +217,29 @@
                         { cameraPos: '5 0 3', interfacePos: '0 0 1', infoPos: '4.3 1.6 4', rotation: 180 },
                         { cameraPos: '0 0 7', interfacePos: '-1 0 0', infoPos: '-1 1.6 6.3', rotation: 90 },
                     ]
-                    this.vrInterface.addButton('changeCamera', '#changeCamera', () => {
+                    this.orbi.addButton('changeCamera', '#changeCamera', () => {
                         this.posIdx = this.posIdx == 2 ? 0 : this.posIdx + 1;
 
                         let { cameraPos, interfacePos, infoPos, rotation } = this.positions[this.posIdx];
 
                         rig.setAttribute('position', cameraPos);
                         rig.setAttribute('rotation', { x: 0, y: rotation - (camera.rotation.y * 180 / Math.PI), z: 0 });
-                        this.vrInterface.updatePosition({ theta: rotation });
+                        this.orbi.updatePosition({ theta: rotation });
                     });
 
-                    this.vrInterface.addButton('increaseFriction', '#increaseFriction', () => {
+                    this.orbi.addButton('increaseFriction', '#increaseFriction', () => {
                         self.changeFriction();
                     });
 
-                    this.vrInterface.addButton('decreaseFriction', '#decreaseFriction', () => {
+                    this.orbi.addButton('decreaseFriction', '#decreaseFriction', () => {
                         self.changeFriction(-1);
                     });
 
-                    this.vrInterface.addButton('increaseAngle', '#increaseAngle', () => {
+                    this.orbi.addButton('increaseAngle', '#increaseAngle', () => {
                         self.changeAngle();
                     });
 
-                    this.vrInterface.addButton('decreaseAngle', '#decreaseAngle', () => {
+                    this.orbi.addButton('decreaseAngle', '#decreaseAngle', () => {
                         self.changeAngle(-1);
                     });
 
@@ -305,7 +305,7 @@
                     string += `Normal: ${(this.cube.body.mass * this.gravity * Math.cos(this.angle) * -1).toFixed(2)} N\n`;
                 }
 
-                this.vrInterface.showSideText(string);
+                this.orbi.showSideText(string);
             },
             updateArrows: function () {
                 this.groupForces.object3D.position.copy(this.cube.body.position)
