--- a/projects/mars.html
+++ b/projects/mars.html
@@ -188,8 +188,7 @@
     <script src="../js/script.js"></script>
     <script>
         TRANSLATION.onTranslate = function () {
-            // document.querySelector('#scene').src = 'src/vascular-diseases-application.html?lang=' + TRANSLATION.currentLang;
-            // document.querySelector('#scene').contentWindow.changeLanguage(TRANSLATION.currentLang);
+            document.querySelector('#scene').contentWindow.changeLanguage(TRANSLATION.currentLang);
         }
         TRANSLATION.add(
             '#header',
