--- a/projects/src/mars-application-VR.html
+++ b/projects/src/mars-application-VR.html
@@ -5,6 +5,7 @@
     <title>Mars VR</title>
     <link rel="shortcut icon" href="../../img/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="../../js/translation.js"></script>
 
     <style>
         body {
@@ -88,10 +89,6 @@
     </div>
 
     <div id="instructions" class="text" style="display: none;">
-        <h2>Instructions:</h2>
-        <p>You are piloting a fictional drone in Mars and searching for special rocks that might store register of
-            ancient life.</p>
-        <p>Follow the path and find 3 reddish rocks.</p>
     </div>
 
     <div id="webgl-output">
