--- a/projects/src/mars-application-VR.html
+++ b/projects/src/mars-application-VR.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="../../img/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="../../js/translation.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/other/howler.js"></script>
 
     <style>
         body {
@@ -85,7 +86,7 @@
     <div id="stats"></div>
     <div class="container">
         <div id="loader"></div>
-        <p id="loader-text" class="text">Downloading...</p>
+        <p id="loader-text" class="text">Loading...</p>
     </div>
 
     <div id="instructions" class="text" style="display: none;">
