--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 
         TRANSLATION.add(
             '#circuits',
-            'Eletic Circuits',
+            'Electric Circuits',
             'Circuitos Elétricos'
         );
 
