--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <a href="javascript: TRANSLATION.redirect('projects/geography.html')">
                     <div class="w3-display-container" style="border:2px solid black">
                         <div id="rock" class="project-title w3-display-topleft w3-padding">Rock Types</div>
-                        <img src="img/projects-main-images/mars.jpg" alt="initial view of the application"
+                        <img src="img/projects-main-images/geography.png" alt="initial view of the application"
                             style="width:100%;">
                     </div>
                 </a>
